优化数据看板，新增密码修改，各模块功能优化