@@ -1,5 +1,7 @@
 package com.custmanage.server.service.impl;
+import com.custmanage.server.common.MapUtil;
 
+import com.custmanage.server.common.BizService;
 import com.custmanage.server.mapper.DashboardMapper;
 import com.custmanage.server.service.IDashboardService;
 import org.springframework.stereotype.Service;
@@ -26,17 +28,19 @@ public class DashboardServiceImpl implements IDashboardService {
         ovCards.put("totalGroups", dashboardMapper.countTotalGroups());
         ovCards.put("dedicatedLineAdvantageGroups", 0);  // TODO: 专线优势集团数逻辑
         ovCards.put("memberAdvantageGroups", 0);           // TODO: 成员优势集团数逻辑
-        Map<String, Object> monthRev = dashboardMapper.sumMonthRevenue(month);
+        Map<String, Object> monthRev = dashboardMapper.sumMonthRevenue(month, BizService.REVENUE.id());
         ovCards.put("monthRevenue", toDouble(monthRev, "total"));
-        Map<String, Object> annualRev = dashboardMapper.sumAnnualRevenue(year);
-        ovCards.put("annualProgress", 0); // TODO: 需年度目标表数据
+        Map<String, Object> annualRev = dashboardMapper.sumAnnualRevenue(year, BizService.REVENUE.id());
+        double annualTarget = toDouble(dashboardMapper.totalAnnualTarget(year), "total");
+        double annualRevenue = toDouble(annualRev, "total");
+        ovCards.put("annualProgress", annualTarget > 0 ? Math.round(annualRevenue * 1000.0 / annualTarget) / 10.0 : 0);
         overview.put("cards", ovCards);
-        overview.put("revenueByBu", dashboardMapper.revenueByBu(month));
+        overview.put("revenueByBu", dashboardMapper.revenueByBu(month, BizService.REVENUE.id()));
         overview.put("revenueByService", dashboardMapper.revenueByService(month));
         // 收入趋势（最近12个月）
-        List<Map<String, Object>> trend = dashboardMapper.revenueTrendByMonth(year);
+        List<Map<String, Object>> trend = dashboardMapper.revenueTrendByMonth(year, BizService.REVENUE.id());
         List<Double> thisYear = buildMonthlyArray(trend, year);
-        overview.put("annualTrend", Map.of("lastYear", Collections.emptyList(), "thisYear", thisYear));
+        overview.put("annualTrend", MapUtil.of("lastYear", Collections.emptyList(), "thisYear", thisYear));
         result.put("overview", overview);
 
         // （二）信息化业务
@@ -44,20 +48,25 @@ public class DashboardServiceImpl implements IDashboardService {
         Map<String, Object> itCards = new LinkedHashMap<>();
         // 当月两线新增: service_code = SVC_ZHUANXIAN / SVC_YYZX
         List<Map<String, Object>> buPerf = dashboardMapper.buPerfByService(month);
+        // 当月两线新增 = 互联网专线 + 数据专线
+        String internetLine = BizService.INTERNET_LINE.code();
+        String dataLine = BizService.DATA_LINE.code();
         double twoLineNew = buPerf.stream().filter(m -> {
             Object sid = m.get("serviceId");
-            return sid != null && (sid.toString().equals("1") || sid.toString().equals("12"));
+            return sid != null && (sid.toString().equals(internetLine) || sid.toString().equals(dataLine));
         }).mapToDouble(m -> toDouble(m, "amount")).sum();
-        itCards.put("twoLineNew", twoLineNew);
-        // ICT签约: service_id = 9
-        double ictAmt = buPerf.stream().filter(m -> "9".equals(String.valueOf(m.get("serviceId"))))
+        itCards.put("twoLineNew", Math.round(twoLineNew * 100.0) / 100.0);
+        // ICT签约
+        String ictCode = BizService.ICT_CONTRACT.code();
+        double ictAmt = buPerf.stream().filter(m -> ictCode.equals(String.valueOf(m.get("serviceId"))))
                 .mapToDouble(m -> toDouble(m, "amount")).sum();
         itCards.put("ictAnnualContract", ictAmt);
         itBiz.put("cards", itCards);
-        // 两线规模按BU
-        itBiz.put("twoLineByBu", dashboardMapper.buPerfByBuService(month, List.of("1","12")));
-        // ICT按BU
-        itBiz.put("ictByBu", dashboardMapper.buPerfByBuService(month, List.of("9")));
+        // 两线规模按BU：互联网专线 + 数据专线 金额相加（每BU一行）
+        itBiz.put("twoLineByBu", dashboardMapper.sumAmountByBu(month,
+                Arrays.asList(BizService.INTERNET_LINE.code(), BizService.DATA_LINE.code())));
+        // ICT按BU：全年累计签约额(柱) + 全年完成率(折线) = 累计签约额 / 年度签约目标
+        itBiz.put("ictByBu", dashboardMapper.buAnnualCompletion(year, BizService.ICT_CONTRACT.id()));
         result.put("itBusiness", itBiz);
 
         // （三）BC融合
@@ -67,17 +76,22 @@ public class DashboardServiceImpl implements IDashboardService {
         long totalGroups = dashboardMapper.countTotalGroups();
         long tfGroups = dashboardMapper.countUnifiedPaymentGroups();
         bcCards.put("unifiedPaymentRatio", totalGroups > 0 ? Math.round(tfGroups * 1000.0 / totalGroups) / 10.0 : 0);
-        // 宽带渗透率、关联人占比从 bu_performance 取
-        double kdPen = buPerf.stream().filter(m -> "10".equals(String.valueOf(m.get("serviceId"))))
-                .mapToDouble(m -> toDouble(m, "amount")).sum();
+        // 要客宽带渗透率、关联人流量主用占比 = 各 BU 的平均值（取所有 BU 均值）
+        List<Map<String, Object>> bcAvg = dashboardMapper.avgAmountByService(month,
+                Arrays.asList(BizService.BROADBAND_PENETRATION.code(), BizService.RELATED_USER_RATIO.code()));
+        String broadbandCode = BizService.BROADBAND_PENETRATION.code();
+        double kdPen = bcAvg.stream().filter(m -> broadbandCode.equals(String.valueOf(m.get("serviceId"))))
+                .mapToDouble(m -> toDouble(m, "avgAmount")).findFirst().orElse(0);
         bcCards.put("broadbandPenetration", kdPen);
-        double relatedRatio = buPerf.stream().filter(m -> "11".equals(String.valueOf(m.get("serviceId"))))
-                .mapToDouble(m -> toDouble(m, "amount")).sum();
+        String relatedCode = BizService.RELATED_USER_RATIO.code();
+        double relatedRatio = bcAvg.stream().filter(m -> relatedCode.equals(String.valueOf(m.get("serviceId"))))
+                .mapToDouble(m -> toDouble(m, "avgAmount")).findFirst().orElse(0);
         bcCards.put("relatedUserMainRatio", relatedRatio);
         bcFusion.put("cards", bcCards);
-        bcFusion.put("broadbandByBu", dashboardMapper.buPerfByBuService(month, List.of("10")));
-        bcFusion.put("relatedUserByBu", dashboardMapper.buPerfByBuService(month, List.of("11")));
-        bcFusion.put("unifiedPaymentByBu", dashboardMapper.buPerfByBuService(month, List.of("10","11")));
+        bcFusion.put("broadbandByBu", dashboardMapper.buPerfByBuService(month, Arrays.asList(BizService.BROADBAND_PENETRATION.code())));
+        bcFusion.put("relatedUserByBu", dashboardMapper.buPerfByBuService(month, Arrays.asList(BizService.RELATED_USER_RATIO.code())));
+        bcFusion.put("unifiedPaymentByBu", dashboardMapper.buPerfByBuService(month,
+                Arrays.asList(BizService.UNIFIED_PAYMENT_MEMBER.code(), BizService.UNIFIED_PAYMENT_BROADBAND_NEW.code())));
         result.put("bcFusion", bcFusion);
 
         // （四）客户经理产能
@@ -94,19 +108,23 @@ public class DashboardServiceImpl implements IDashboardService {
 
         // 指标卡
         Map<String, Object> cards = new LinkedHashMap<>();
-        Map<String, Object> annualRev = dashboardMapper.sumAnnualRevenue(year);
-        cards.put("annualProgress", 0); // TODO
-        cards.put("dedicatedLineAnnual", 0); // TODO
-        cards.put("ictAnnualContract", 0); // TODO
-        cards.put("broadbandPenetration", 0); // TODO
+        double revenue = toDouble(dashboardMapper.buAnnualSum(buOrgId, year, Arrays.asList(BizService.REVENUE.code())), "total");
+        double target = toDouble(dashboardMapper.buAnnualTarget(buOrgId, year), "total");
+        cards.put("annualProgress", target > 0 ? Math.round(revenue * 1000.0 / target) / 10.0 : 0);
+        cards.put("dedicatedLineAnnual", toDouble(dashboardMapper.buAnnualSum(buOrgId, year, Arrays.asList(BizService.DEDICATED_LINE.code())), "total"));
+        cards.put("ictAnnualContract", toDouble(dashboardMapper.buAnnualSum(buOrgId, year, Arrays.asList(BizService.ICT_CONTRACT.code())), "total"));
+        cards.put("broadbandPenetration", toDouble(dashboardMapper.buAnnualAvg(buOrgId, year, BizService.BROADBAND_PENETRATION.id()), "avg"));
         result.put("cards", cards);
 
-        result.put("monthlyRevenue", dashboardMapper.buMonthlyRevenue(buOrgId, year));
-        result.put("dedicatedLineAndFusion", Collections.emptyList()); // TODO
-        result.put("monthlyIctContract", dashboardMapper.buMonthlyPerf(buOrgId, 9L, year));
-        result.put("ictZcAndPolicy", Collections.emptyList()); // TODO
-        result.put("monthlyBroadbandPenetration", dashboardMapper.buMonthlyPerf(buOrgId, 10L, year));
-        result.put("monthlyBroadbandNew", dashboardMapper.buMonthlyPerf(buOrgId, 11L, year));
+        // 图表
+        result.put("monthlyRevenue", dashboardMapper.buMonthlyRevenue(buOrgId, year, BizService.REVENUE.id()));
+        // 专线月收入（融合产品销量暂未实现，先只展示专线）
+        result.put("dedicatedLineAndFusion", dashboardMapper.buMonthlySum(buOrgId, year, Arrays.asList(BizService.DEDICATED_LINE.code())));
+        result.put("monthlyIctContract", dashboardMapper.buMonthlyPerf(buOrgId, BizService.ICT_CONTRACT.id(), year));
+        // ICT 政采数量、政策份额暂未实现
+        result.put("ictZcAndPolicy", Collections.emptyList());
+        result.put("monthlyBroadbandPenetration", dashboardMapper.buMonthlyPerf(buOrgId, BizService.BROADBAND_PENETRATION.id(), year));
+        result.put("monthlyBroadbandNew", dashboardMapper.buMonthlyPerf(buOrgId, BizService.UNIFIED_PAYMENT_BROADBAND_NEW.id(), year));
 
         return result;
     }
@@ -129,8 +147,14 @@ public class DashboardServiceImpl implements IDashboardService {
 
     private double toDouble(Map<String, Object> map, String key) {
         Object val = map != null ? map.get(key) : null;
-        if (val instanceof Number n) return n.doubleValue();
-        if (val instanceof String s) return Double.parseDouble(s);
+        if (val instanceof Number) {
+            Number n = (Number) val;
+            return n.doubleValue();
+        }
+        if (val instanceof String) {
+            String s = (String) val;
+            return Double.parseDouble(s);
+        }
         return 0;
     }
 
@@ -139,7 +163,7 @@ public class DashboardServiceImpl implements IDashboardService {
         for (Map<String, Object> row : rows) {
             String m = (String) row.get("month");
             if (m != null && m.startsWith(year)) {
-                int idx = Integer.parseInt(m.substring(5, 7)) - 1;
+                int idx = Integer.parseInt(m.substring(4, 6)) - 1;
                 if (idx >= 0 && idx < 12) arr[idx] = toDouble(row, "amount");
             }
         }
